[package]
name = "salvo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.41.1", features = ["full"]}
salvo = {version = "0.74.2",features=["oapi"]}
tracing = "0.1"
tracing-subscriber = "0.3"
serde = "1.0.215"
serde_json = "1.0.133"
validator = "0.19.0"
time = "0.3.36"
sea-orm = { version = "1.1.1", features = ["runtime-tokio-native-tls", "macros", "debug-print","sqlx-mysql"] }

